--- a/flex.html
+++ b/flex.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <style>
+      .flex-container {
+        display: flex;
+        align-items: stretch;
+        background-color: #f1f1f1;
+      }
+
+      .flex-container>div {
+        background-color: dodgerblue;
+        color: white;
+        width: 100px;
+        margin: 10px;
+        text-align: center;
+        line-height: 75px;
+        font-size: 30px;
+
+      }
+    </style>
+  </head>
   <body>
     <h1>The order Property</h1>
     <p>Use the order property to sort the flex item as you like:</p>
